  specification is expected.
      ocamlc -w +fragile-match
      ...[@@ocaml.warning "-fragile-match"]
  Note that only a single warning name at a time is supported for now:
  "-w +foo-bar" does not work, you must use "-w +foo -w -bar".
  (Nicolás Ojeda Bär, review by Gabriel Scherer, Florian Angeletti and
   Leo White)

- #8939: Command-line option to save Linear IR before emit.
  (Greta Yorsh, review by Mark Shinwell, Sébastien Hinderer and Frédéric Bour)

- #9003: Start compilation from Emit when the input file is in Linear IR format.
  (Greta Yorsh, review by Jérémie Dimino, Gabriel Scherer and Frédéric Bour)

### Language features (highlights):

* #9500, #9727, #9866, #9870, #9873: Injectivity annotations
  One can now mark type parameters as injective, which is useful for
  abstract types:
    module Vec : sig type !'a t end = struct type 'a t = 'a array end
  On non-abstract types, this can be used to check the injectivity of
  parameters. Since all parameters of record and sum types are by definition
  injective, this only makes sense for type abbreviations:
    type !'a t = 'a list
  Note that this change required making the regularity check stricter.
  (Jacques Garrigue, review by Jeremy Yallop and Leo White)

### Runtime system (highlights):

- #9534, #9947: Introduce a naked pointers checker mode to the runtime
  (configure option --enable-naked-pointers-checker).  Alarms are printed
  when the garbage collector finds out-of-heap pointers that could
  cause a crash in no-naked-pointers mode.
  (Enguerrand Decorne, KC Sivaramakrishnan, Xavier Leroy, Stephen Dolan,
  David Allsopp, Nicolás Ojeda Bär review by Xavier Leroy, Nicolás Ojeda Bär)

* #1128, #7503, #9036, #9722, #10069: EINTR-based signal handling.
  When a signal arrives, avoid running its OCaml handler in the middle
  of a blocking section. Instead, allow control to return quickly to
  a polling point where the signal handler can safely run, ensuring that